--- a/Demo_Inspection.vcxproj
+++ b/Demo_Inspection.vcxproj
@@ -89,7 +89,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\abstract\InspectFactory.cpp" />
     <ClCompile Include="src\Controller.cpp" />
+    <ClCompile Include="src\interface\Autofocus.cpp" />
+    <ClCompile Include="src\interface\InspectMethod.cpp" />
+    <ClCompile Include="src\interface\Positioning.cpp" />
     <QtRcc Include="Demo_Inspection.qrc" />
     <QtUic Include="Demo_Inspection.ui" />
     <QtMoc Include="Demo_Inspection.h" />
@@ -98,6 +102,10 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="src\Controller.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\abstract\InspectFactory.h" />
+    <ClInclude Include="src\interface\Modules.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
